--- a/firstPython/web/learning_log/learning_logs/templates/learning_logs/index.html
+++ b/firstPython/web/learning_log/learning_logs/templates/learning_logs/index.html
@@ -1,3 +1,7 @@
-<p>learning log</p>
+{% extends "learning_logs/base.html" %}
 
-<p> llll</p>
+{% block content %}
+<p>
+    Learning Log helps you keep track of your learning 
+</p>
+{% endblock content %}
