--- a/firstPython/web/learning_log/users/templates/registration/login.html
+++ b/firstPython/web/learning_log/users/templates/registration/login.html
@@ -1,5 +1,7 @@
-{% extends 'learning_logs/base.html" %}
+{% extends "learning_logs/base.html" %}
+
 {% block content %}
+
     {% if form.errors %}
         <p>Your username and password didn't match. Please try again.</p>
     {% endif %}
@@ -9,6 +11,7 @@
         {{ form.as_p }}
 
         <button name="submit">Log in</button>
-        <input type="hidden" name="next" value="{% url 'learning_logs:index %}" />
+        <input type="hidden" name="next" value="{% url 'learning_logs:index' %}" />
     </form>
+
 {% endblock content%}
