--- a/firstPython/web/learning_log/learning_logs/templates/learning_logs/edit_entry.html
+++ b/firstPython/web/learning_log/learning_logs/templates/learning_logs/edit_entry.html
@@ -1,15 +1,18 @@
 {% extends "learning_logs/base.html" %}
 
+{% load bootstrap4 %}
+
+{% block page_header %}
+    <!-- <h2><a href="{% url 'learning_logs:new_entry' topic.id %}">{{entry}}</a></h2> -->
+    <h2><a href="{% url 'learning_logs:topic' topic.id %}">{{entry}}</a></h2>
+{% endblock page_header %}
+
 {% block content %}
-
-    <p><a href="{% url 'learning_logs:new_entry' topic.id %}">{{entry}}</a></p> 
-    <p>Edit entry:</p>
-
-    <form action="{% url 'learning_logs:edit_entry' entry.id %}", method='post'>
+    <form action="{% url 'learning_logs:edit_entry' entry.id %}", method='post' class='form'>
         {% csrf_token %}
-        {{ form.as_p}}
-        <button name='submit'>Save changes</button>
+        {% bootstrap_form form %}
+        {% buttons %}
+            <button name="submit" class="btn btn-primary">Save changes</button>
+        {% endbuttons %}
     </form>
-    
-    
 {% endblock content %}
