--- a/firstPython/web/learning_log/learning_logs/templates/learning_logs/new_entry.html
+++ b/firstPython/web/learning_log/learning_logs/templates/learning_logs/new_entry.html
@@ -1,12 +1,20 @@
 {% extends "learning_logs/base.html" %}
 
-{% block content %}
-<p><a href="{% url 'learning_logs:topic' topic.id %}">{{topic}}</a></p>
+{% load bootstrap4 %}
 
-<form action="{% url 'learning_logs:new_entry' topic.id %}", method='post'>
+{% block page_header %}
+    <h2><a href="{% url 'learning_logs:topic' topic.id %}">{{topic}}</a></h2>
+{% endblock page_header %}
+
+{% block content %}
+
+<form action="{% url 'learning_logs:new_entry' topic.id %}", method='post' class='form'>
     {% csrf_token %}
-    {{ form.as_p}}
-    <button name='submit'>Add entry</button>
+    {% bootstrap_form form %}
+    {% buttons %}
+        <button name="submit" class="btn btn-primary">Add entry</button>
+    {% endbuttons %}
+
 </form>
 
 {% endblock content %}
