--- a/firstPython/web/learning_log/learning_logs/templates/learning_logs/new_topic.html
+++ b/firstPython/web/learning_log/learning_logs/templates/learning_logs/new_topic.html
@@ -1,13 +1,20 @@
 {% extends "learning_logs/base.html" %}
 
+{% load bootstrap4 %}
+
+{% block page_header %}
+    <h2>Add a New Topic.</h2>
+{% endblock page_header %}
+
 {% block content %}
 
-<p>Add a new Topic:</p>
-
-<form action="{% url 'learning_logs:new_topic' %}", method='post'>
+<form action="{% url 'learning_logs:new_topic' %}", method='post' class='form'>
     {% csrf_token %}
-    {{ form.as_p}}
-    <button name='submit'>Add topic</button>
+    {% bootstrap_form form %}
+    {% buttons %}
+        <button name="submit" class="btn btn-primary">Add topic</button>
+    {% endbuttons %}
+
 </form>
 
 {% endblock content %}
